--- a/package.json
+++ b/package.json
@@ -1,46 +1,41 @@
 {
-    "name": "batalla-naval-ts",
-    "version": "1.0.0",
-    "description": "Juego de Batalla Naval multijugador",
-    "main": "dist/server/server.js",
-    "scripts": {
-        "build": "webpack --config webpack.config.js",
-        "start": "node dist/server/server.js",
-        "dev:build": "webpack --config webpack.config.js --watch",
-        "dev:server": "nodemon --delay 1 --watch dist dist/server/server.js",
-        "dev": "concurrently \"npm run dev:build\" \"npm run dev:server\"",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [
-        "batalla-naval",
-        "juego",
-        "sockets",
-        "typescript"
-    ],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@emotion/react": "^11.14.0",
-        "@emotion/styled": "^11.14.0",
-        "@mui/icons-material": "^7.0.1",
-        "@mui/material": "^7.0.1",
-        "express": "^4.18.2",
-        "socket.io": "^4.7.2",
-        "socket.io-client": "^4.7.2"
-    },
-    "devDependencies": {
-        "@types/express": "^4.17.21",
-        "@types/node": "^20.10.0",
-        "concurrently": "^8.2.2",
-        "copy-webpack-plugin": "^11.0.0",
-        "nodemon": "^3.0.1",
-        "ts-loader": "^9.5.1",
-        "typescript": "^5.3.2",
-        "webpack": "^5.89.0",
-        "webpack-cli": "^5.1.4"
-    },
-    "optionalDependencies": {
-        "bufferutil": "^4.0.8",
-        "utf-8-validate": "^5.0.10"
-    }
+  "name": "batalla-naval-ts",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "node server.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node server.js",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@ant-design/cssinjs": "^1.23.0",
+    "@ant-design/icons": "^6.0.0",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@react-three/drei": "^10.0.5",
+    "@react-three/fiber": "^9.1.1",
+    "@types/three": "^0.175.0",
+    "@types/uuid": "^10.0.0",
+    "antd": "^5.24.6",
+    "next": "15.2.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "three": "^0.175.0",
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.3"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/webpack": "^5.28.5",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.4",
+    "tailwindcss": "^4",
+    "typescript": "^5"
+  }
 }
