--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,20 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "dist/server/server.js",
-            "use": "@vercel/node"
-        },
-        {
-            "src": "dist/client/**",
-            "use": "@vercel/static"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/socket.io/(.*)",
-            "dest": "/dist/server/server.js"
-        },
-        {
-            "src": "/api/(.*)",
-            "dest": "/dist/server/server.js"
-        },
-        {
-            "src": "/(.*\\.[^/]*)",
-            "dest": "/dist/client/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/dist/client/index.html"
-        }
-    ]
+  "version": 2,
+  "framework": "nextjs",
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "regions": ["cdg1"],
+  "routes": [
+    {
+      "src": "/api/socket",
+      "continue": true
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
